# sat2rf1-py

./: README.md  setup.cfg  setup.py
src/sat2rf1/: __init__.py  constants.py  core.py  discover.py  utilities.py
